[gd_scene load_steps=4 format=3 uid="uid://dxg6ndgjsmdqm"]

[ext_resource type="Script" path="res://game_ui.gd" id="1_4n0iq"]
[ext_resource type="Script" path="res://game_ui_debug.gd" id="2_1ygbq"]
[ext_resource type="PackedScene" uid="uid://c5j6yc30a0sip" path="res://cost.tscn" id="2_8aias"]

[node name="game_ui" type="VBoxContainer"]
offset_right = 316.0
offset_bottom = 190.0
size_flags_horizontal = 3
script = ExtResource("1_4n0iq")

[node name="title" type="PanelContainer" parent="."]
layout_mode = 2

[node name="m" type="MarginContainer" parent="title"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Label" type="Label" parent="title/m"]
layout_mode = 2
text = "BattleMecha v.0.2"
horizontal_alignment = 1

[node name="turn_count" type="Label" parent="."]
layout_mode = 2
text = "Round – : Turn –"
horizontal_alignment = 1

[node name="cost" parent="." instance=ExtResource("2_8aias")]
layout_mode = 2
override_visible = 15
flip_colors = true
font_size_override = 20

[node name="debug" type="GridContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
columns = 2
script = ExtResource("2_1ygbq")

[node name="Label" type="Label" parent="debug"]
layout_mode = 2
text = "Rounds :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="rounds" type="HBoxContainer" parent="debug"]
layout_mode = 2

[node name="reset" type="Button" parent="debug/rounds"]
layout_mode = 2
text = "Reset"

[node name="minus" type="Button" parent="debug/rounds"]
layout_mode = 2
text = " – "

[node name="plus" type="Button" parent="debug/rounds"]
layout_mode = 2
text = " + "

[node name="Label2" type="Label" parent="debug"]
layout_mode = 2
text = "Turns :"
horizontal_alignment = 2
vertical_alignment = 1

[node name="turn" type="HBoxContainer" parent="debug"]
layout_mode = 2

[node name="reset" type="Button" parent="debug/turn"]
layout_mode = 2
text = "Reset"

[node name="minus" type="Button" parent="debug/turn"]
layout_mode = 2
text = " – "

[node name="plus" type="Button" parent="debug/turn"]
layout_mode = 2
text = " + "

[node name="m" type="MarginContainer" parent="debug"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = -13
theme_override_constants/margin_bottom = -13

[node name="Label" type="Label" parent="debug/m"]
layout_mode = 2
text = ":"
horizontal_alignment = 2

[node name="0" type="HBoxContainer" parent="debug/m"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="ti" type="Label" parent="debug/m/0"]
layout_mode = 2
theme_override_colors/font_color = Color(0.690196, 0.690196, 0.690196, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
text = "Ti"

[node name="0" type="CheckBox" parent="debug/m/0"]
layout_mode = 2
button_pressed = true

[node name="ga" type="Label" parent="debug/m/0"]
layout_mode = 2
theme_override_colors/font_color = Color(0.529412, 0.807843, 0.921569, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
text = " Ga"

[node name="1" type="CheckBox" parent="debug/m/0"]
layout_mode = 2

[node name="al" type="Label" parent="debug/m/0"]
layout_mode = 2
theme_override_colors/font_color = Color(0.690196, 0.768627, 0.870588, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
text = " Al"

[node name="2" type="CheckBox" parent="debug/m/0"]
layout_mode = 2

[node name="co" type="Label" parent="debug/m/0"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.278431, 0.670588, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
text = " Co"

[node name="3" type="CheckBox" parent="debug/m/0"]
layout_mode = 2

[node name="currency" type="HBoxContainer" parent="debug"]
layout_mode = 2

[node name="zero" type="Button" parent="debug/currency"]
layout_mode = 2
text = " = 0 "

[node name="minus5" type="Button" parent="debug/currency"]
layout_mode = 2
text = " –5 "

[node name="minus" type="Button" parent="debug/currency"]
layout_mode = 2
text = " –1 "

[node name="plus" type="Button" parent="debug/currency"]
layout_mode = 2
text = " +1 "

[node name="plus5" type="Button" parent="debug/currency"]
layout_mode = 2
text = " +5 "

[node name="big" type="Button" parent="debug/currency"]
layout_mode = 2
text = " = 99 "

[connection signal="pressed" from="debug/rounds/reset" to="debug" method="_on_rounds_reset_pressed"]
[connection signal="pressed" from="debug/rounds/minus" to="debug" method="_on_rounds_minus_pressed"]
[connection signal="pressed" from="debug/rounds/plus" to="debug" method="_on_rounds_plus_pressed"]
[connection signal="pressed" from="debug/turn/reset" to="debug" method="_on_turn_reset_pressed"]
[connection signal="pressed" from="debug/turn/minus" to="debug" method="_on_turn_minus_pressed"]
[connection signal="pressed" from="debug/turn/plus" to="debug" method="_on_turn_plus_pressed"]
[connection signal="toggled" from="debug/m/0/0" to="debug" method="_on_0_toggled"]
[connection signal="toggled" from="debug/m/0/1" to="debug" method="_on_1_toggled"]
[connection signal="toggled" from="debug/m/0/2" to="debug" method="_on_2_toggled"]
[connection signal="toggled" from="debug/m/0/3" to="debug" method="_on_3_toggled"]
[connection signal="pressed" from="debug/currency/zero" to="debug" method="_on_zero_pressed"]
[connection signal="pressed" from="debug/currency/minus5" to="debug" method="_on_minus_5_pressed"]
[connection signal="pressed" from="debug/currency/minus" to="debug" method="_on_minus_pressed"]
[connection signal="pressed" from="debug/currency/plus" to="debug" method="_on_plus_pressed"]
[connection signal="pressed" from="debug/currency/plus5" to="debug" method="_on_plus_5_pressed"]
[connection signal="pressed" from="debug/currency/big" to="debug" method="_on_big_pressed"]
